--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html, #container {
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 #container {
@@ -18,6 +18,7 @@ body {
     display: grid;
     grid-template: 1fr 1fr / 3fr 1fr;
     padding: 20px 45px;
+    font-weight: 700;
 }
 
 #search {
@@ -27,7 +28,7 @@ body {
 #search input {
     flex-grow: 1;
     height: 27px;
-    background-color: rgba(128, 128, 128, 0.2);
+    background-color: #e2e8f0;
     border: 0;
     border-radius: 15px;
     margin-left: 20px;
@@ -37,30 +38,97 @@ body {
     display: grid;
     grid-auto-flow: column;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
+    font-size: 1.1rem;
 }
 
 #notif img:nth-child(2) {
     background-color: rgb(255, 170, 0);
     border-radius: 25px;
+    position: relative;
+    bottom: 5px;
+}
+
+#notif span {
+    position: relative;
+    top: 4px;
+}
+
+#user {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: auto 1fr;
+}
+
+#user img {
+    background-color: rgb(255, 170, 0);
+    border-radius: 35px;
+}
+
+#user div {
+    margin-left: 20px;
+    font-size: .9rem;
+}
+
+#user span {
+    position: relative;
+    top: 5px;
+    font-size: 1.5rem;
+}
+
+#buttons {
+    align-self: center;
+}
+
+#buttons button {
+    background-color: #0284c7;
+    color: white;
+    font-weight: 700;
+    border: 0;
+    border-radius: 25px;
+    padding: 10px 30px;
+    margin-right: 20px;
 }
 
 #sidebar {
     grid-row: 1 / -1;
-    background-color: blue;
+    background-color: #0284c7;
     color: white;
     font-size: 1.4rem;
     font-weight: 700;
 }
 
-#sidebar h2 {
-    margin: 25px 0 0 25px;
+#sidebar div {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    grid-template-columns: 50px;
+    gap: 15px;
+    margin-left: 25px;
+}
+
+#sidebar img {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(303deg) brightness(103%) contrast(101%);
 }
 
 ul {
     list-style: none;
     display: grid;
     gap: 20px;
+}
+
+ul img {
+    width: 25px;
+    height: 25px;
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(303deg) brightness(103%) contrast(101%);
+}
+
+li {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 25px;
+    align-items: center;
+    gap: 25px;
 }
 
 #main {
