--- a/style.css
+++ b/style.css
@@ -88,6 +88,15 @@ body {
     border-radius: 25px;
     padding: 10px 30px;
     margin-right: 20px;
+    box-shadow: 2px 2px 5px gray;
+}
+
+#buttons button:hover {
+    background-color: #25a5e5;
+}
+
+#buttons button:active {
+    box-shadow: inset 0 0 5px gray;
 }
 
 #sidebar {
@@ -133,6 +142,134 @@ li {
 
 #main {
     grid-column: 2;
-    background-color: rgb(0, 0, 0);
+    background-color: #e2e8f0;
     border-top: 5px solid rgb(222, 220, 220);
+    display: grid;
+    grid-template: 1fr 1fr / 7fr 3fr;
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding-left: 20px;
+}
+
+#proj {
+    grid-row: 1 / -1;
+}
+
+#projects {    
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.card {
+    background-color: white;
+    border-radius: 15px;
+    border-left: 10px solid rgb(255, 170, 0);
+    display: grid;
+    grid-template-rows: 140px 30px;
+    padding: 15px 25px;
+}
+
+.card span {
+    color: gray;
+    font-size: 1.1rem;
+}
+
+.icons {
+    justify-self: end;
+}
+
+.icons img {
+    width: 30px;
+    height: 30px;
+    margin-right: 30px;
+}
+
+#announcements, #trending {
+    padding-left: 20px;
+}
+
+#announcements div:nth-child(1), #proj > div:nth-child(1) {
+    padding: 25px 0 15px 20px;
+}
+
+#trending > div:nth-child(1) {
+    padding: 0 0 15px 0;
+}
+
+#announcements div:nth-child(1) {
+    position: relative;
+    right: 20px;
+}
+
+.card2 {
+    background-color: white;
+    border-radius: 15px;
+    display: grid;
+    max-width: 350px;
+    padding: 5px 30px;
+    font-size: 1rem;
+}
+
+.card2 > p {
+    border-bottom: 2px solid #e2e8f0;
+    margin: 20px 0 0 0;
+    padding-bottom: 20px;
+}
+
+.card2 .no-border {
+    border-bottom: 0;
+}
+
+.card2 span {
+    color: gray;
+    font-size: 0.8rem;
+    display: block;
+}
+
+#trending .card2 {
+    width: 190px;
+    padding-top: 10px;
+    gap: 5px;
+}
+
+.item {
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: start;
+    gap: 15px;
+    font-weight: normal;
+    font-size: .9rem;
+}
+
+.item span {
+    color: gray;
+}
+
+.item img[alt='elephant'] {
+    background-color: rgb(202, 226, 234);
+}
+
+.item img[alt='cat'] {
+    background-color: rgb(255, 170, 0);
+}
+
+.item img[alt='rabbit'] {
+    background-color: rgb(200, 196, 196);
+}
+
+.item img[alt='dog2'] {
+    background-color: rgb(219, 159, 179);
+}
+
+#trending img {
+    width: 40px;
+    height: 40px;
+    border-radius: 15px;
+}
+
+.card, .card2 {
+    box-shadow: 2px 2px 5px rgb(193, 190, 190);
 }
